# multi_facts_chat_engine

./: .gitignore  Makefile  README.md  debug_hang.py  main.py  pyproject.toml
agent/: extractor.py
config/: settings.py  string_literals.py
resources/: prompts.py  salary_facts.json  sample_facts.json
rule_engine/dsl/: ast_nodes.py  fact_loader.py  grammar.lark  grammar_old.lark  parser.py  transformer.py
rule_engine/engine/: condition.py  in_condition.py  inference_engine.py  rule_matcher.py  working_memory.py
rule_engine/explain/: explanation.py
rule_engine/models/: rule.py
rule_engine/utils/: salary_spliter.py
rules/: fertilizer_rules.dsl  salary_tax.dsl
